# rootchain

./: .envrc  .gitignore  Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: p0gv9h89l7s0x0882c9f5d7a1m1dhqrz-source  pfl7hc27m2zqv8r3bz1dlmibdlvr80af-source  pjm967z8b8f8x5p01z2fwgjivw3r63lz-source  vi36jlvhxd1j235ccpdl0prmjhy94qga-source  vmgmmi22v00vknd4sfmdpvwh8apn0ang-source
.github/workflows/: integration.yaml
cli/: Cargo.toml
cli/src/: command.rs
devshell/: default.nix  package.nix
docs/changelog/: 2026-02-20-commits-3541db1-to-5a462ca.md
docs/postmortem/: 2026-02-20-mainnet-finality-deadlock.en.md
node/client/: Cargo.toml
node/client/src/: benchmarking.rs
node/service/: Cargo.toml
node/service/src/: chain_spec.rs  grandpa_support.rs  lib.rs  thxnet_grandpa_recovery.rs
pallets/dao/: Cargo.toml
pallets/dao/src/: lib.rs  mock.rs  tests.rs
pallets/finality-rescue/: Cargo.toml
pallets/finality-rescue/src/: lib.rs  mock.rs
primitives/src/v2/: mod.rs
runtime/common/src/: lib.rs
runtime/polkadot/: Cargo.toml
runtime/polkadot/constants/: Cargo.toml
runtime/polkadot/constants/src/: lib.rs
runtime/polkadot/src/: assets_api.rs  lib.rs
runtime/thxnet/: Cargo.toml
runtime/thxnet-testnet/: Cargo.toml
runtime/thxnet-testnet/constants/: Cargo.toml
runtime/thxnet-testnet/constants/src/: lib.rs
runtime/thxnet-testnet/src/: lib.rs
runtime/thxnet/constants/: Cargo.toml
runtime/thxnet/src/: lib.rs
scripts/: prepare-accounts.sh  prepare-authority-keys.sh
scripts/chain-sync/: .env.example  .gitignore  package.json
scripts/chain-sync/src/: cli.ts  verify-encoding.ts
scripts/runtime-upgrade/: .gitignore  force-runtime-upgrade.ts  networks.ts  package.json  query-hardfork-data.ts  scan-block-times.ts  scan-detail.ts
(+16 files in other folders)
